[22] remove the usage of --enable-preview